# turkish-absa

./: .gitignore  config.yaml  push_model.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  constants.js  styles.css
frontend/src/components/: AspectCard.jsx  Hero.jsx  Results.jsx  ReviewInput.jsx
src/: data.py  evaluate.py  label.py  serve.py  train.py
