[project]
name = "turkish-absa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.111.0",
    "datasets>=5.0.0",
    "ollama>=0.6.2",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
