[project]
name = "turkish-absa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.111.0",
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "huggingface-hub>=1.20.1",
    "ollama>=0.6.2",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
